--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
 
   <!-- Include the Google Maps API library - required for embedding maps -->
-  <script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
   <script type="text/javascript">
     var position = [63.8081453,20.3400352];
     function showGoogleMaps() {
