--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       <span class="icon">Dokument</span>
     </div>
     <div class="icon">
-      <img class="icon" src="img/grasklippare.png">
+      <img class="icon" src="img/graesklippare.png">
       <span class="icon">Gräsklippning</span>
     </div>
     <div class="icon">
