Gråskala på knapparna

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
       height: 3em;
     }
 
+    img.icon:hover {
+      filter: grayscale(100%);
+    }
+
     span.icon {
       flex: auto;
     }
@@ -186,10 +190,6 @@
     <div class="icon">
       <img class="icon" src="img/tv.png">
       <span class="icon">TV & Fiber</span>
-    </div>
-    <div class="icon">
-      <img class="icon" src="img/styrelsen.png">
-      <span class="icon">Styrelsen</span>
     </div>
     <div class="icon">
       <img class="icon img" src="img/felanmalan.png">
