--- a/index.html
+++ b/index.html
@@ -72,12 +72,17 @@
       height: 100px;
     }
 
+    span.icon {
+      font-size: 1em;
+      font-weight: bold;
+    }
+
     @media screen and (max-width: 550px) {
       nav {
-        height: 100px;
+        height: 150px;
       }
       img.icon {
-        height: 20px;
+        height: 30px;
       }
       span.icon {
         font-size: 0.8em;
@@ -192,8 +197,8 @@
   </header>
   <nav>
     <div class="icon">
-      <img class="icon" src="img/dokument.png">
-      <span class="icon">Dokument</span>
+      <img class="icon" src="img/infopaerm.png">
+      <span class="icon">Infopärm</span>
     </div>
     <div class="icon">
       <img class="icon" src="img/graesklippare.png">
