färg på knapparna

--- a/index.html
+++ b/index.html
@@ -81,9 +81,15 @@
       nav {
         height: 150px;
       }
+
+      div.icon {
+        flex-basis: 40%;
+      }
+
       img.icon {
         height: 30px;
       }
+
       span.icon {
         font-size: 0.8em;
       }
