--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     img.icon {
       flex: auto;
       height: 100px;
+      transition: filter 0.5s ease;
     }
 
     span.icon {
@@ -96,7 +97,7 @@
     }
 
     img.icon:hover {
-      filter: grayscale(100%);
+      filter: grayscale(80%);
     }
 
     span.icon {
