--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       margin-left: 10px;
       top: 5vh;
       z-index: 1;
-      background-image: url('img/sjofrun-3.png');
+      background-image: url('img/sjofrun_logo.png');
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
