--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
   </nav>
   <article>
     <section id="text">
-      <h1>Välkomsttext</h1>
+      <h1>Aktuellt</h1>
       <p>Träutensilierna i ett tryckeri äro ingalunda en
         faktor där trevnadens ordningens och ekonomiens upprätthållande,
         och dock är det icke sällan som sorgliga erfarenheter göras ordningens
