--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
 
+<link href="https://fonts.googleapis.com/css?family=Volkhov" rel="stylesheet">
 
   <style>
     body {
       margin: 0;
       padding: 0;
+      font-family: 'Volkhov', serif;
     }
 
     header {
@@ -76,6 +78,7 @@
     span.icon {
       font-size: 1em;
       font-weight: bold;
+      font-family: 'Volkhov', serif;
     }
 
     @media screen and (max-width: 550px) {
