--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       font-size: 1em;
       font-weight: bold;
       font-family: 'Volkhov', serif;
+      text-transform: uppercase;
     }
 
     @media screen and (max-width: 550px) {
