--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
     </section>
     <section id="kontakt">
       <h2>Kontakt</h2>
+      <a href="https://www.facebook.com/pg/Sjöfruns-samfällighetsförening-Tomtebo-348557935240083" target="_blank" class="btn btn-primary btn-sm btn-block">Facebook</a>
     </section>
   </article>
   <footer>
