--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       align-items: center;
       justify-content: center;
       flex-flow: column;
+      cursor: pointer;
     }
 
     img.icon {
@@ -177,6 +178,10 @@
     img.moraen {
       width: 200px;
     }
+
+    h3 {
+      margin-top:20px;
+    }
   </style>
 
 
@@ -224,19 +229,19 @@
     &nbsp;
   </header>
   <nav>
-    <div class="icon">
-      <img class="icon" src="img/infopaerm.png">
-      <span class="icon">Infopärm</span>
+    <div class="icon" onclick="window.open('https://www.dropbox.com/s/m7xsojm9s3sd31j/Lorem-Ipsum.pdf?dl=0','_blank');">
+        <img class="icon" src="img/infopaerm.png">
+        <span class="icon">Infopärm</span>
     </div>
-    <div class="icon">
+    <div class="icon" onclick="window.open('https://www.dropbox.com/s/m7xsojm9s3sd31j/Lorem-Ipsum.pdf?dl=0','_blank');">
       <img class="icon" src="img/graesklippare.png">
       <span class="icon">Gräsklippning</span>
     </div>
-    <div class="icon">
+    <div class="icon" onclick="window.open('https://www.dropbox.com/s/m7xsojm9s3sd31j/Lorem-Ipsum.pdf?dl=0','_blank');">
       <img class="icon" src="img/tv.png">
       <span class="icon">TV & Fiber</span>
     </div>
-    <div class="icon">
+    <div class="icon" onclick="window.open('https://www.dropbox.com/s/m7xsojm9s3sd31j/Lorem-Ipsum.pdf?dl=0','_blank');">
       <img class="icon img" src="img/felanmalan.png">
       <span class="icon">Felanmälan</span>
     </div>
@@ -252,6 +257,8 @@
     <section id="kontakt">
       <h2>Kontakt</h2>
       <a href="https://www.facebook.com/pg/Sjöfruns-samfällighetsförening-Tomtebo-348557935240083" target="_blank" title="Facebook" class="btn btn-facebook btn-sm btn-block"><i class="fa fa-facebook fa-fw"></i> Facebook</a>
+      <h3>Styrelsen</h3>
+
     </section>
   </article>
   <footer>
