--- a/index.html
+++ b/index.html
@@ -204,6 +204,13 @@
         faktor där trevnadens ordningens och ekonomiens upprätthållande,
         och dock är det icke sällan som sorgliga erfarenheter göras ordningens
         och ekon och miens därmed upprätthållande.</p>
+      
+       <h1>Nyinflyttad?</h1>
+      <p>Träutensilierna i ett tryckeri äro ingalunda en
+        faktor där trevnadens ordningens och ekonomiens upprätthållande,
+        och dock är det icke sällan som sorgliga erfarenheter göras ordningens
+        och ekon och miens därmed upprätthållande.</p>
+      
     </section>
 
 
