--- a/index.html
+++ b/index.html
@@ -204,18 +204,12 @@
         faktor där trevnadens ordningens och ekonomiens upprätthållande,
         och dock är det icke sällan som sorgliga erfarenheter göras ordningens
         och ekon och miens därmed upprätthållande.</p>
-      <br><br>
-      
-       <h1>Nyinflyttad?</h1>
-      <p>Träutensilierna i ett tryckeri äro ingalunda en
-        faktor där trevnadens ordningens och ekonomiens upprätthållande,
-        och dock är det icke sällan som sorgliga erfarenheter göras ordningens
-        och ekon och miens därmed upprätthållande.</p>
       
     </section>
 
 
     <section id="kontakt" class="col-12 col-lg-4">
+      <h1>Kontakt</a>
       <a href="mailto:sjofrunsstyrelse@gmail.com" target="_blank" title="sjofrunsstyrelse@gmail.com" class="btn btn-success btn-lg btn-block"><i class="fa fa-envelope fa-fw"></i> sjofrunsstyrelse@gmail.com</a>
       <a href="https://www.facebook.com/pg/Sjöfruns-samfällighetsförening-Tomtebo-348557935240083" target="_blank" title="Facebook" class="btn btn-primary btn-lg btn-block"><i class="fa fa-facebook fa-fw"></i> Facebook</a>
     </section>
