--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
       width: 100%;
     }
 
-    .card {
+    .menu-card {
       width:130px;
       border: none;
       cursor: pointer;
     }
 
-    .card-img-top {
+    .menu-card-img-top {
       transition: filter 0.5s ease;
     }
-    .card-img-top:hover {
+    .menu-card-img-top:hover {
       filter: grayscale(80%);
     }
 
-    .card-title {
+    .menu-card-title {
       font-size:0.8em;
     }
 
@@ -75,6 +75,11 @@
 
     section {
       padding-top:10px;
+    }
+
+    .btn{
+      white-space:normal !important;
+      word-wrap: break-word;
     }
 
 
@@ -103,6 +108,18 @@
     @media screen and (max-width: 991px) {
       #kontakt {
         order:-1;
+      }
+    }
+
+    @media screen and (max-width: 700px) {
+      #karta {
+        display: none;
+      }
+
+      #logo {
+        width: 80%;
+        margin-left: 10%;
+        margin-right: 10%;
       }
     }
 
@@ -155,43 +172,43 @@
   <div class="container-fluid">
   <nav class="row justify-content-center align-content-center">
     <div class="col">
-    <div class="card mx-auto" onclick="window.open('https://www.dropbox.com/s/zvl8auuelijk0k7/sjofrun_infoparm.pdf?dl=0','_blank');">
-        <img class="card-img-top" src="img/infopaerm.png">
-        <div class="card-body">
-          <h6 class="card-title text-center">Infopärm</h6>
+    <div class="card menu-card mx-auto" onclick="window.open('https://www.dropbox.com/s/zvl8auuelijk0k7/sjofrun_infoparm.pdf?dl=0','_blank');">
+        <img class="card-img-top menu-card-img-top" src="img/infopaerm.png">
+        <div class="card-body menu-card-body">
+          <h6 class="card-title menu-card-title text-center">Infopärm</h6>
         </div>
     </div>
   </div>
   <div class="col">
-    <div class="card mx-auto" onclick="window.open('https://www.dropbox.com/s/s4oy0u00rbaz6j8/sjofrun_grasklippning_2017.pdf?dl=0','_blank');">
-      <img class="card-img-top" src="img/graesklippare.png">
-      <div class="card-body">
-        <h6 class="card-title text-center">Gräsklippning</h6>
+    <div class="card menu-card mx-auto" onclick="window.open('https://www.dropbox.com/s/s4oy0u00rbaz6j8/sjofrun_grasklippning_2017.pdf?dl=0','_blank');">
+      <img class="card-img-top menu-card-img-top" src="img/graesklippare.png">
+      <div class="card-body menu-card-body">
+        <h6 class="card-title menu-card-title text-center">Gräsklippning</h6>
       </div>
     </div>
   </div>
   <div class="col">
-    <div class="card mx-auto" onclick="window.open('https://www.dropbox.com/s/m7xsojm9s3sd31j/Lorem-Ipsum.pdf?dl=0','_blank');">
-      <img class="card-img-top" src="img/tv.png">
-      <div class="card-body">
-        <h6 class="card-title text-center">TV & Fiber</h6>
+    <div class="card menu-card mx-auto" onclick="window.open('https://www.dropbox.com/s/m7xsojm9s3sd31j/Lorem-Ipsum.pdf?dl=0','_blank');">
+      <img class="card-img-top menu-card-img-top" src="img/tv.png">
+      <div class="card-body menu-card-body">
+        <h6 class="card-title menu-card-title text-center">TV & Fiber</h6>
       </div>
     </div>
   </div>
   <div class="col">
-    <div class="card mx-auto" onclick="window.open('https://www.dropbox.com/s/m7xsojm9s3sd31j/Lorem-Ipsum.pdf?dl=0','_blank');">
-      <img class="card-img-top" src="img/felanmalan.png">
-      <div class="card-body">
-        <h6 class="card-title text-center">Felanmälan</h6>
+    <div class="card menu-card mx-auto" onclick="window.open('https://www.dropbox.com/s/m7xsojm9s3sd31j/Lorem-Ipsum.pdf?dl=0','_blank');">
+      <img class="card-img-top menu-card-img-top" src="img/felanmaelan.png">
+      <div class="card-body menu-card-body">
+        <h6 class="card-title menu-card-title text-center">Felanmälan</h6>
       </div>
     </div>
   </div>
 
   <div class="col">
-    <div class="card mx-auto" onclick="window.open('https://www.dropbox.com/s/m7xsojm9s3sd31j/Lorem-Ipsum.pdf?dl=0','_blank');">
-      <img class="card-img-top" src="img/felanmalan.png">
-      <div class="card-body">
-        <h6 class="card-title text-center">Årsmöte</h6>
+    <div class="card menu-card mx-auto" onclick="window.open('https://www.dropbox.com/s/m7xsojm9s3sd31j/Lorem-Ipsum.pdf?dl=0','_blank');">
+      <img class="card-img-top menu-card-img-top" src="img/aorsmoete.png">
+      <div class="card-body menu-card-body">
+        <h6 class="card-title menu-card-title text-center">Årsmöte</h6>
       </div>
     </div>
   </div>
@@ -204,14 +221,35 @@
         faktor där trevnadens ordningens och ekonomiens upprätthållande,
         och dock är det icke sällan som sorgliga erfarenheter göras ordningens
         och ekon och miens därmed upprätthållande.</p>
-      
+
     </section>
 
 
     <section id="kontakt" class="col-12 col-lg-4">
       <a href="mailto:sjofrunsstyrelse@gmail.com" target="_blank" title="sjofrunsstyrelse@gmail.com" class="btn btn-success btn-lg btn-block"><i class="fa fa-envelope fa-fw"></i> sjofrunsstyrelse@gmail.com</a>
+
+      <a href="mailto:david.feltenius@umu.se" target="_blank" title="david.feltenius@umu.se" class="btn btn-outline-primary btn-lg btn-block"><small>Ordförande</small> <br>David Feltenius, Sjöfruvägen 49</a>
+
+      <a href="mailto:sara_nilsson41@hotmail.com" target="_blank" title="sara_nilsson41@hotmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Kassör</small> <br>Sara Nilsson, Sjöfruvägen 135</a>
+
+      <a href="mailto:joakim.lindquist@gmail.com" target="_blank" title="joakim.lindquist@gmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Vice Ordförande</small> <br>Joakim Lindquist, Sjöfruvägen 119</a>
+
+      <a href="mailto:lenahjerm@hotmail.com" target="_blank" title="lenahjerm@hotmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Sekreterare</small> <br>Lena Hjerm, Sjöfruvägen 127</a>
+
+      <a href="mailto:thomas.lindgren@vll.se" target="_blank" title="thomas.lindgren@vll.se" class="btn btn-outline-primary btn-lg btn-block"><small>Ledamot</small> <br>Thomas Lindgren, Sjöfruvägen 43</a>
+
+      <a href="mailto:per.edberg@sjofrun.se" target="_blank" title="per.edberg@sjofrun.se" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Per Edberg, Sjöfruvägen 145</a>
+
+      <a href="mailto:susanna.j.mo@icloud.com" target="_blank" title="susanna.j.mo@icloud.com" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Susanna Jakobson Mo, Sjöfruvägen 45</a>
+
+      <a href="mailto:toz_tezol@yahoo.com" target="_blank" title="toz_tezol@yahoo.com" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Jalil Bahar Gogani, Sjöfruvägen 79</a>
+
+      <a href="mailto:therese.andersson@sjofrun.se" target="_blank" title="therese.andersson@sjofrun.se" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Therese Andersson, Sjöfruvägen 3</a>
+
+
       <a href="https://www.facebook.com/pg/Sjöfruns-samfällighetsförening-Tomtebo-348557935240083" target="_blank" title="Facebook" class="btn btn-primary btn-lg btn-block"><i class="fa fa-facebook fa-fw"></i> Facebook</a>
     </section>
+
   </article>
 </div>
 
