--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   <div class="container-fluid">
   <nav class="row justify-content-center align-content-center">
     <div class="col">
-    <div class="card menu-card mx-auto" onclick="window.open('https://www.dropbox.com/s/zvl8auuelijk0k7/sjofrun_infoparm.pdf?dl=0','_blank');">
+    <div class="card menu-card mx-auto" onclick="window.open('https://drive.google.com/file/d/1NKxWlKXxKc-qktG2gYp94S9ORDdbTA1F/view?usp=sharing','_blank');">
         <img class="card-img-top menu-card-img-top" src="img/infopaerm.png">
         <div class="card-body menu-card-body">
           <h6 class="card-title menu-card-title text-center">Infopärm</h6>
@@ -180,7 +180,7 @@
     </div>
   </div>
   <div class="col">
-    <div class="card menu-card mx-auto" onclick="window.open('https://www.dropbox.com/s/s4oy0u00rbaz6j8/sjofrun_grasklippning_2017.pdf?dl=0','_blank');">
+    <div class="card menu-card mx-auto" onclick="window.open('https://drive.google.com/file/d/1JJ7p3KsqpZS1yf2jhwAS3dOtt9Lz_frK/view?usp=sharing','_blank');">
       <img class="card-img-top menu-card-img-top" src="img/graesklippare.png">
       <div class="card-body menu-card-body">
         <h6 class="card-title menu-card-title text-center">Gräsklippning</h6>
