--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     @media screen and (max-width: 991px) {
       #kontakt {
-        order:-1;
+
       }
     }
 
@@ -215,8 +215,18 @@
 
   </nav>
   <article class="row">
-    <section class="col-12 col-lg-8">
+    <section class="col-12 col-lg-5">
       <h1>Aktuellt</h1>
+      <p>Träutensilierna i ett tryckeri äro ingalunda en
+        faktor där trevnadens ordningens och ekonomiens upprätthållande,
+        och dock är det icke sällan som sorgliga erfarenheter göras ordningens
+        och ekon och miens därmed upprätthållande.</p>
+
+    </section>
+
+
+    <section class="col-12 col-lg-3">
+      <h1>Nyinflyttad</h1>
       <p>Träutensilierna i ett tryckeri äro ingalunda en
         faktor där trevnadens ordningens och ekonomiens upprätthållande,
         och dock är det icke sällan som sorgliga erfarenheter göras ordningens
@@ -228,26 +238,26 @@
     <section id="kontakt" class="col-12 col-lg-4">
       <a href="mailto:sjofrunsstyrelse@gmail.com" target="_blank" title="sjofrunsstyrelse@gmail.com" class="btn btn-success btn-lg btn-block"><i class="fa fa-envelope fa-fw"></i> sjofrunsstyrelse@gmail.com</a>
 
-      <a href="mailto:david.feltenius@umu.se" target="_blank" title="david.feltenius@umu.se" class="btn btn-outline-primary btn-lg btn-block"><small>Ordförande</small> <br>David Feltenius, Sjöfruvägen 49</a>
-
-      <a href="mailto:sara_nilsson41@hotmail.com" target="_blank" title="sara_nilsson41@hotmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Kassör</small> <br>Sara Nilsson, Sjöfruvägen 135</a>
-
-      <a href="mailto:joakim.lindquist@gmail.com" target="_blank" title="joakim.lindquist@gmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Vice Ordförande</small> <br>Joakim Lindquist, Sjöfruvägen 119</a>
-
-      <a href="mailto:lenahjerm@hotmail.com" target="_blank" title="lenahjerm@hotmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Sekreterare</small> <br>Lena Hjerm, Sjöfruvägen 127</a>
-
-      <a href="mailto:thomas.lindgren@vll.se" target="_blank" title="thomas.lindgren@vll.se" class="btn btn-outline-primary btn-lg btn-block"><small>Ledamot</small> <br>Thomas Lindgren, Sjöfruvägen 43</a>
-
-      <a href="mailto:per.edberg@sjofrun.se" target="_blank" title="per.edberg@sjofrun.se" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Per Edberg, Sjöfruvägen 145</a>
-
-      <a href="mailto:susanna.j.mo@icloud.com" target="_blank" title="susanna.j.mo@icloud.com" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Susanna Jakobson Mo, Sjöfruvägen 45</a>
-
-      <a href="mailto:toz_tezol@yahoo.com" target="_blank" title="toz_tezol@yahoo.com" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Jalil Bahar Gogani, Sjöfruvägen 79</a>
-
-      <a href="mailto:therese.andersson@sjofrun.se" target="_blank" title="therese.andersson@sjofrun.se" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Therese Andersson, Sjöfruvägen 3</a>
-
-
       <a href="https://www.facebook.com/pg/Sjöfruns-samfällighetsförening-Tomtebo-348557935240083" target="_blank" title="Facebook" class="btn btn-primary btn-lg btn-block"><i class="fa fa-facebook fa-fw"></i> Facebook</a>
+
+      <a href="mailto:david.feltenius@umu.se" target="_blank" title="david.feltenius@umu.se" class="btn btn-outline-primary btn-lg btn-block"><small>Ordförande</small> <br>David Feltenius <br><small> Sjöfruvägen 49</small></a>
+
+      <a href="mailto:sara_nilsson41@hotmail.com" target="_blank" title="sara_nilsson41@hotmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Kassör</small> <br>Sara Nilsson <br><small>  Sjöfruvägen 135</small></a>
+
+      <a href="mailto:joakim.lindquist@gmail.com" target="_blank" title="joakim.lindquist@gmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Vice Ordförande</small> <br>Joakim Lindquist <br><small>  Sjöfruvägen 119</small></a>
+
+      <a href="mailto:lenahjerm@hotmail.com" target="_blank" title="lenahjerm@hotmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Sekreterare</small> <br>Lena Hjerm <br><small> Sjöfruvägen 127</small></a>
+
+      <a href="mailto:thomas.lindgren@vll.se" target="_blank" title="thomas.lindgren@vll.se" class="btn btn-outline-primary btn-lg btn-block"><small>Ledamot</small> <br>Thomas Lindgren <br><small> Sjöfruvägen 43</small></a>
+
+      <a href="mailto:per.edberg@sjofrun.se" target="_blank" title="per.edberg@sjofrun.se" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Per Edberg <br><small> Sjöfruvägen 145</small></a>
+
+      <a href="mailto:susanna.j.mo@icloud.com" target="_blank" title="susanna.j.mo@icloud.com" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Susanna Jakobson Mo <br><small> Sjöfruvägen 45</small></a>
+
+      <a href="mailto:toz_tezol@yahoo.com" target="_blank" title="toz_tezol@yahoo.com" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Jalil Bahar Gogani <br><small> Sjöfruvägen 79</small></a>
+
+      <a href="mailto:therese.andersson@sjofrun.se" target="_blank" title="therese.andersson@sjofrun.se" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Therese Andersson <br><small> Sjöfruvägen 3</small></a>
+
     </section>
 
   </article>
