--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
   </nav>
   <article class="row">
     <section class="col-12 col-lg-5">
-      <h1>Aktuellt</h1>
+      <h2>Aktuellt</h2>
       <p>Träutensilierna i ett tryckeri äro ingalunda en
         faktor där trevnadens ordningens och ekonomiens upprätthållande,
         och dock är det icke sällan som sorgliga erfarenheter göras ordningens
@@ -226,7 +226,7 @@
 
 
     <section class="col-12 col-lg-3">
-      <h1>Nyinflyttad</h1>
+      <h2>Nyinflyttad</h2>
       <p>Träutensilierna i ett tryckeri äro ingalunda en
         faktor där trevnadens ordningens och ekonomiens upprätthållande,
         och dock är det icke sällan som sorgliga erfarenheter göras ordningens
@@ -236,6 +236,7 @@
 
 
     <section id="kontakt" class="col-12 col-lg-4">
+      <h2>Kontakt</h2>
       <a href="mailto:sjofrunsstyrelse@gmail.com" target="_blank" title="sjofrunsstyrelse@gmail.com" class="btn btn-success btn-lg btn-block"><i class="fa fa-envelope fa-fw"></i> sjofrunsstyrelse@gmail.com</a>
 
       <a href="https://www.facebook.com/pg/Sjöfruns-samfällighetsförening-Tomtebo-348557935240083" target="_blank" title="Facebook" class="btn btn-primary btn-lg btn-block"><i class="fa fa-facebook fa-fw"></i> Facebook</a>
