--- a/index.html
+++ b/index.html
@@ -241,23 +241,23 @@
 
       <a href="https://www.facebook.com/pg/Sjöfruns-samfällighetsförening-Tomtebo-348557935240083" target="_blank" title="Facebook" class="btn btn-primary btn-lg btn-block"><i class="fa fa-facebook fa-fw"></i> Facebook</a>
 
-      <a href="mailto:david.feltenius@umu.se" target="_blank" title="david.feltenius@umu.se" class="btn btn-outline-primary btn-lg btn-block"><small>Ordförande</small> <br>David Feltenius <br><small> Sjöfruvägen 49</small></a>
+      <a href="mailto:david.feltenius@umu.se" target="_blank" title="david.feltenius@umu.se" class="btn btn-outline-primary btn-lg btn-block"><small>Ordförande</small> <br>David Feltenius (49)</a>
 
-      <a href="mailto:sara_nilsson41@hotmail.com" target="_blank" title="sara_nilsson41@hotmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Kassör</small> <br>Sara Nilsson <br><small>  Sjöfruvägen 135</small></a>
+      <a href="mailto:sara_nilsson41@hotmail.com" target="_blank" title="sara_nilsson41@hotmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Kassör</small> <br>Sara Nilsson (135)</a>
 
-      <a href="mailto:joakim.lindquist@gmail.com" target="_blank" title="joakim.lindquist@gmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Vice Ordförande</small> <br>Joakim Lindquist <br><small>  Sjöfruvägen 119</small></a>
+      <a href="mailto:joakim.lindquist@gmail.com" target="_blank" title="joakim.lindquist@gmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Vice Ordförande</small> <br>Joakim Lindquist (119)</a>
 
-      <a href="mailto:lenahjerm@hotmail.com" target="_blank" title="lenahjerm@hotmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Sekreterare</small> <br>Lena Hjerm <br><small> Sjöfruvägen 127</small></a>
+      <a href="mailto:lenahjerm@hotmail.com" target="_blank" title="lenahjerm@hotmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Sekreterare</small> <br>Lena Hjerm (127)</a>
 
-      <a href="mailto:thomas.lindgren@vll.se" target="_blank" title="thomas.lindgren@vll.se" class="btn btn-outline-primary btn-lg btn-block"><small>Ledamot</small> <br>Thomas Lindgren <br><small> Sjöfruvägen 43</small></a>
+      <a href="mailto:thomas.lindgren@vll.se" target="_blank" title="thomas.lindgren@vll.se" class="btn btn-outline-primary btn-lg btn-block"><small>Ledamot</small> <br>Thomas Lindgren (43)</a>
 
-      <a href="mailto:per.edberg@sjofrun.se" target="_blank" title="per.edberg@sjofrun.se" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Per Edberg <br><small> Sjöfruvägen 145</small></a>
+      <a href="mailto:per.edberg@sjofrun.se" target="_blank" title="per.edberg@sjofrun.se" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Per Edberg (145)</a>
 
-      <a href="mailto:susanna.j.mo@icloud.com" target="_blank" title="susanna.j.mo@icloud.com" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Susanna Jakobson Mo <br><small> Sjöfruvägen 45</small></a>
+      <a href="mailto:susanna.j.mo@icloud.com" target="_blank" title="susanna.j.mo@icloud.com" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Susanna Jakobson Mo (45)</a>
 
-      <a href="mailto:toz_tezol@yahoo.com" target="_blank" title="toz_tezol@yahoo.com" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Jalil Bahar Gogani <br><small> Sjöfruvägen 79</small></a>
+      <a href="mailto:toz_tezol@yahoo.com" target="_blank" title="toz_tezol@yahoo.com" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Jalil Bahar Gogani (79)</a>
 
-      <a href="mailto:therese.andersson@sjofrun.se" target="_blank" title="therese.andersson@sjofrun.se" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Therese Andersson <br><small> Sjöfruvägen 3</small></a>
+      <a href="mailto:therese.andersson@sjofrun.se" target="_blank" title="therese.andersson@sjofrun.se" class="btn btn-outline-primary btn-lg btn-block">Suppleant - Therese Andersson (3)</a>
 
     </section>
 
