--- a/index.html
+++ b/index.html
@@ -241,23 +241,23 @@
 
       <a href="https://www.facebook.com/pg/Sjöfruns-samfällighetsförening-Tomtebo-348557935240083" target="_blank" title="Facebook" class="btn btn-primary btn-lg btn-block"><i class="fa fa-facebook fa-fw"></i> Facebook</a>
 
-      <a href="mailto:david.feltenius@umu.se" target="_blank" title="david.feltenius@umu.se" class="btn btn-outline-primary btn-lg btn-block"><small>Ordförande</small> <br>David Feltenius (49)</a>
+      <a href="mailto:david.feltenius@umu.se" target="_blank" title="david.feltenius@umu.se" class="btn btn-outline-primary btn-lg btn-block">David Feltenius (Ordförande)</a>
 
-      <a href="mailto:sara_nilsson41@hotmail.com" target="_blank" title="sara_nilsson41@hotmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Kassör</small> <br>Sara Nilsson (135)</a>
+      <a href="mailto:sara_nilsson41@hotmail.com" target="_blank" title="sara_nilsson41@hotmail.com" class="btn btn-outline-primary btn-lg btn-block">Sara Nilsson (Kassör)</a>
 
-      <a href="mailto:joakim.lindquist@gmail.com" target="_blank" title="joakim.lindquist@gmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Vice Ordförande</small> <br>Joakim Lindquist (119)</a>
+      <a href="mailto:joakim.lindquist@gmail.com" target="_blank" title="joakim.lindquist@gmail.com" class="btn btn-outline-primary btn-lg btn-block">Joakim Lindquist (Vice Ordförande)</a>
 
-      <a href="mailto:lenahjerm@hotmail.com" target="_blank" title="lenahjerm@hotmail.com" class="btn btn-outline-primary btn-lg btn-block"><small>Sekreterare</small> <br>Lena Hjerm (127)</a>
+      <a href="mailto:lenahjerm@hotmail.com" target="_blank" title="lenahjerm@hotmail.com" class="btn btn-outline-primary btn-lg btn-block">Lena Hjerm (Sekreterare)</a>
 
-      <a href="mailto:thomas.lindgren@vll.se" target="_blank" title="thomas.lindgren@vll.se" class="btn btn-outline-primary btn-lg btn-block"><small>Ledamot</small> <br>Thomas Lindgren (43)</a>
+      <a href="mailto:thomas.lindgren@vll.se" target="_blank" title="thomas.lindgren@vll.se" class="btn btn-outline-primary btn-lg btn-block">Thomas Lindgren (Ledamot)</a>
 
-      <a href="mailto:per.edberg@sjofrun.se" target="_blank" title="per.edberg@sjofrun.se" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Per Edberg (145)</a>
+      <a href="mailto:per.edberg@sjofrun.se" target="_blank" title="per.edberg@sjofrun.se" class="btn btn-outline-primary btn-lg btn-block">Per Edberg (Suppleant)</a>
 
-      <a href="mailto:susanna.j.mo@icloud.com" target="_blank" title="susanna.j.mo@icloud.com" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Susanna Jakobson Mo (45)</a>
+      <a href="mailto:susanna.j.mo@icloud.com" target="_blank" title="susanna.j.mo@icloud.com" class="btn btn-outline-primary btn-lg btn-block">Susanna Jakobson Mo (Suppleant)</a>
 
-      <a href="mailto:toz_tezol@yahoo.com" target="_blank" title="toz_tezol@yahoo.com" class="btn btn-outline-primary btn-lg btn-block"><small>Suppleant</small> <br>Jalil Bahar Gogani (79)</a>
+      <a href="mailto:toz_tezol@yahoo.com" target="_blank" title="toz_tezol@yahoo.com" class="btn btn-outline-primary btn-lg btn-block">Jalil Bahar Gogani (Suppleant)</a>
 
-      <a href="mailto:therese.andersson@sjofrun.se" target="_blank" title="therese.andersson@sjofrun.se" class="btn btn-outline-primary btn-lg btn-block">Suppleant - Therese Andersson (3)</a>
+      <a href="mailto:therese.andersson@sjofrun.se" target="_blank" title="therese.andersson@sjofrun.se" class="btn btn-outline-primary btn-lg btn-block">Therese Andersson (Suppleant)</a>
 
     </section>
 
