--- a/index.html
+++ b/index.html
@@ -82,6 +82,36 @@
       word-wrap: break-word;
     }
 
+    .btn-facebook {
+  	  background: #3B5998;
+  	  color: #fff;
+  	  border-width: 1px;
+  	  border-style: solid;
+  	  border-color: #263961;
+  	}
+  	.btn-facebook:link, .btn-facebook:visited {
+  	  color: #fff;
+  	}
+    .btn-facebook:active, .btn-facebook:hover {
+  	  background: #263961;
+  	  color: #fff;
+  	}
+
+    .btn-kontakt {
+  	  background: #9fc2bb;
+  	  color: #fff;
+  	  border-width: 1px;
+  	  border-style: solid;
+  	  border-color: #9fc2bb;
+  	}
+  	.btn-kontakt:link, .btn-kontakt:visited {
+  	  color: #fff;
+  	}
+  	.btn-kontakt:active, .btn-kontakt:hover {
+  	  background: #8fb2ab;
+  	  color: #fff;
+  	}
+
 
     footer {
       width: 100%;
@@ -237,27 +267,27 @@
 
     <section id="kontakt" class="col-12 col-lg-4">
       <h2>Kontakt</h2>
-      <a href="mailto:sjofrunsstyrelse@gmail.com" target="_blank" title="sjofrunsstyrelse@gmail.com" class="btn btn-success btn-lg btn-block"><i class="fa fa-envelope fa-fw"></i> sjofrunsstyrelse@gmail.com</a>
+      <a href="mailto:sjofrunsstyrelse@gmail.com" target="_blank" title="sjofrunsstyrelse@gmail.com" class="btn btn-kontakt btn-lg btn-block"><i class="fa fa-envelope fa-fw"></i> sjofrunsstyrelse@gmail.com</a>
 
-      <a href="https://www.facebook.com/pg/Sjöfruns-samfällighetsförening-Tomtebo-348557935240083" target="_blank" title="Facebook" class="btn btn-primary btn-lg btn-block"><i class="fa fa-facebook fa-fw"></i> Facebook</a>
+      <a href="https://www.facebook.com/pg/Sjöfruns-samfällighetsförening-Tomtebo-348557935240083" target="_blank" title="Facebook" class="btn btn-facebook btn-lg btn-block"><i class="fa fa-facebook fa-fw"></i> Facebook</a>
 
-      <a href="mailto:david.feltenius@umu.se" target="_blank" title="david.feltenius@umu.se" class="btn btn-outline-primary btn-sm btn-block">David Feltenius <small>Ordförande</small></a>
+      <a href="mailto:david.feltenius@umu.se" target="_blank" title="david.feltenius@umu.se" class="btn btn-kontakt btn-sm btn-block">David Feltenius <small>Ordförande</small></a>
 
-      <a href="mailto:sara_nilsson41@hotmail.com" target="_blank" title="sara_nilsson41@hotmail.com" class="btn btn-outline-primary btn-sm btn-block">Sara Nilsson <small>Kassör</small></a>
+      <a href="mailto:sara_nilsson41@hotmail.com" target="_blank" title="sara_nilsson41@hotmail.com" class="btn btn-kontakt btn-sm btn-block">Sara Nilsson <small>Kassör</small></a>
 
-      <a href="mailto:joakim.lindquist@gmail.com" target="_blank" title="joakim.lindquist@gmail.com" class="btn btn-outline-primary btn-sm btn-block">Joakim Lindquist <small>Vice Ordförande</small></a>
+      <a href="mailto:joakim.lindquist@gmail.com" target="_blank" title="joakim.lindquist@gmail.com" class="btn btn-kontakt btn-sm btn-block">Joakim Lindquist <small>Vice Ordförande</small></a>
 
-      <a href="mailto:lenahjerm@hotmail.com" target="_blank" title="lenahjerm@hotmail.com" class="btn btn-outline-primary btn-sm btn-block">Lena Hjerm <small>Sekreterare</small></a>
+      <a href="mailto:lenahjerm@hotmail.com" target="_blank" title="lenahjerm@hotmail.com" class="btn btn-kontakt btn-sm btn-block">Lena Hjerm <small>Sekreterare</small></a>
 
-      <a href="mailto:thomas.lindgren@vll.se" target="_blank" title="thomas.lindgren@vll.se" class="btn btn-outline-primary btn-sm btn-block">Thomas Lindgren <small>edamot</small></a>
+      <a href="mailto:thomas.lindgren@vll.se" target="_blank" title="thomas.lindgren@vll.se" class="btn btn-kontakt btn-sm btn-block">Thomas Lindgren <small>edamot</small></a>
 
-      <a href="mailto:per.edberg@sjofrun.se" target="_blank" title="per.edberg@sjofrun.se" class="btn btn-outline-primary btn-sm btn-block">Per Edberg <small>Suppleant</small></a>
+      <a href="mailto:per.edberg@sjofrun.se" target="_blank" title="per.edberg@sjofrun.se" class="btn btn-kontakt btn-sm btn-block">Per Edberg <small>Suppleant</small></a>
 
-      <a href="mailto:susanna.j.mo@icloud.com" target="_blank" title="susanna.j.mo@icloud.com" class="btn btn-outline-primary btn-sm btn-block">Susanna Jakobson Mo <small>Suppleant</small></a>
+      <a href="mailto:susanna.j.mo@icloud.com" target="_blank" title="susanna.j.mo@icloud.com" class="btn btn-kontakt btn-sm btn-block">Susanna Jakobson Mo <small>Suppleant</small></a>
 
-      <a href="mailto:toz_tezol@yahoo.com" target="_blank" title="toz_tezol@yahoo.com" class="btn btn-outline-primary btn-sm btn-block">Jalil Bahar Gogani <small>Suppleant</small></a>
+      <a href="mailto:toz_tezol@yahoo.com" target="_blank" title="toz_tezol@yahoo.com" class="btn btn-kontakt btn-sm btn-block">Jalil Bahar Gogani <small>Suppleant</small></a>
 
-      <a href="mailto:therese.andersson@sjofrun.se" target="_blank" title="therese.andersson@sjofrun.se" class="btn btn-outline-primary btn-sm btn-block">Therese Andersson <small>Suppleant</small></a>
+      <a href="mailto:therese.andersson@sjofrun.se" target="_blank" title="therese.andersson@sjofrun.se" class="btn btn-kontakt btn-sm btn-block">Therese Andersson <small>Suppleant</small></a>
 
     </section>
 
