--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     }
 
     .btn-facebook {
-  	  background: #3B5998;
+  	  background: #485868;
   	  color: #fff;
   	  border-width: 1px;
   	  border-style: solid;
