--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     }
 
     .btn-facebook {
-  	  background: #485868;
+  	  background: #3B5998;
   	  color: #fff;
   	  border-width: 1px;
   	  border-style: solid;
@@ -109,6 +109,21 @@
   	}
   	.btn-kontakt:active, .btn-kontakt:hover {
   	  background: #8fb2ab;
+  	  color: #fff;
+  	}
+
+    .btn-mail {
+  	  background: #f3c766;
+  	  color: #fff;
+  	  border-width: 1px;
+  	  border-style: solid;
+  	  border-color: #f3c766;
+  	}
+  	.btn-mail:link, .btn-mail:visited {
+  	  color: #fff;
+  	}
+  	.btn-mail:active, .btn-mail:hover {
+  	  background: #e3b756;
   	  color: #fff;
   	}
 
@@ -267,7 +282,7 @@
 
     <section id="kontakt" class="col-12 col-lg-4">
       <h2>Kontakt</h2>
-      <a href="mailto:sjofrunsstyrelse@gmail.com" target="_blank" title="sjofrunsstyrelse@gmail.com" class="btn btn-kontakt btn-lg btn-block"><i class="fa fa-envelope fa-fw"></i> sjofrunsstyrelse@gmail.com</a>
+      <a href="mailto:sjofrunsstyrelse@gmail.com" target="_blank" title="sjofrunsstyrelse@gmail.com" class="btn btn-mail btn-lg btn-block"><i class="fa fa-envelope fa-fw"></i> sjofrunsstyrelse@gmail.com</a>
 
       <a href="https://www.facebook.com/pg/Sjöfruns-samfällighetsförening-Tomtebo-348557935240083" target="_blank" title="Facebook" class="btn btn-facebook btn-lg btn-block"><i class="fa fa-facebook fa-fw"></i> Facebook</a>
 
