--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
       padding-top:10px;
     }
 
+    h2 {
+      margin-bottom: 25px;
+    }
+
     .btn{
       white-space:normal !important;
       word-wrap: break-word;
