--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
 
     .btn-kontakt {
   	  background: #9fc2bb;
-  	  color: #fff;
+  	  color: #222;
   	  border-width: 1px;
   	  border-style: solid;
   	  border-color: #9fc2bb;
   	}
   	.btn-kontakt:link, .btn-kontakt:visited {
-  	  color: #fff;
+  	  color: #222;
   	}
   	.btn-kontakt:active, .btn-kontakt:hover {
   	  background: #8fb2ab;
@@ -118,13 +118,13 @@
 
     .btn-mail {
   	  background: #f3c766;
-  	  color: #fff;
+  	  color: #222;
   	  border-width: 1px;
   	  border-style: solid;
   	  border-color: #f3c766;
   	}
   	.btn-mail:link, .btn-mail:visited {
-  	  color: #fff;
+  	  color: #222;
   	}
   	.btn-mail:active, .btn-mail:hover {
   	  background: #e3b756;
