--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     }
 
     h2 {
+      margin-top: 40px;
       margin-bottom: 25px;
     }
 
@@ -271,11 +272,23 @@
         och dock är det icke sällan som sorgliga erfarenheter göras ordningens
         och ekon och miens därmed upprätthållande.</p>
 
+      <h2>Felanmälan</h2>
+      <p>Träutensilierna i ett tryckeri äro ingalunda en
+        faktor där trevnadens ordningens och ekonomiens upprätthållande,
+        och dock är det icke sällan som sorgliga erfarenheter göras ordningens
+        och ekon och miens därmed upprätthållande.</p>
+
     </section>
 
 
     <section class="col-12 col-lg-3">
       <h2>Nyinflyttad</h2>
+      <p>Träutensilierna i ett tryckeri äro ingalunda en
+        faktor där trevnadens ordningens och ekonomiens upprätthållande,
+        och dock är det icke sällan som sorgliga erfarenheter göras ordningens
+        och ekon och miens därmed upprätthållande.</p>
+
+      <h2>Årsmöte</h2>
       <p>Träutensilierna i ett tryckeri äro ingalunda en
         faktor där trevnadens ordningens och ekonomiens upprätthållande,
         och dock är det icke sällan som sorgliga erfarenheter göras ordningens
