--- a/index.html
+++ b/index.html
@@ -282,11 +282,8 @@
 
 
     <section class="col-12 col-lg-3">
-      <h2>Nyinflyttad</h2>
-      <p>Träutensilierna i ett tryckeri äro ingalunda en
-        faktor där trevnadens ordningens och ekonomiens upprätthållande,
-        och dock är det icke sällan som sorgliga erfarenheter göras ordningens
-        och ekon och miens därmed upprätthållande.</p>
+      <h2>Nyinflyttad?</h2>
+      <p>Välkommen till Sjöfruns samfällighet, vi hoppas att du ska trivas här! En snabb vägg till det viktigaste du behöver ha koll på hittar du i vår <a href="https://drive.google.com/file/d/1NKxWlKXxKc-qktG2gYp94S9ORDdbTA1F/view?usp=sharing" target="_blank">Infopärm</a>. Förutom det är det viktigt att du skickar dina kontaktuppgifter till styrelsen så att du inte missar viktig information. </p>
 
       <h2>Årsmöte</h2>
       <p>Träutensilierna i ett tryckeri äro ingalunda en
