--- a/index.html
+++ b/index.html
@@ -267,10 +267,7 @@
   <article class="row">
     <section class="col-12 col-lg-5">
       <h2>Aktuellt</h2>
-      <p>Träutensilierna i ett tryckeri äro ingalunda en
-        faktor där trevnadens ordningens och ekonomiens upprätthållande,
-        och dock är det icke sällan som sorgliga erfarenheter göras ordningens
-        och ekon och miens därmed upprätthållande.</p>
+      <p><small>2017-12-10</small>Året närmar sig sitt slut och styrelsen sammanställer inkomna motioner, dessa publiceras här innan årsmötet som infaller i mars. Kallelse kommer att skickas ut via e-post.</p>
 
       <h2>Felanmälan</h2>
       <p>Träutensilierna i ett tryckeri äro ingalunda en
