--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
   <article class="row">
     <section class="col-12 col-lg-5">
       <h2>Aktuellt</h2>
-      <p><small>2017-12-10</small>Året närmar sig sitt slut och styrelsen sammanställer inkomna motioner, dessa publiceras här innan årsmötet som infaller i mars. Kallelse kommer att skickas ut via e-post.</p>
+      <p><small>2017-12-10</small> Året närmar sig sitt slut och styrelsen sammanställer inkomna motioner, dessa publiceras här innan årsmötet som infaller i mars. Kallelse kommer att skickas ut via e-post.</p>
 
       <h2>Felanmälan</h2>
       <p>Träutensilierna i ett tryckeri äro ingalunda en
@@ -283,10 +283,14 @@
       <p>Välkommen till Sjöfruns samfällighet, vi hoppas att du ska trivas här! En snabb vägg till det viktigaste du behöver ha koll på hittar du i vår <a href="https://drive.google.com/file/d/1NKxWlKXxKc-qktG2gYp94S9ORDdbTA1F/view?usp=sharing" target="_blank">Infopärm</a>. Förutom det är det viktigt att du skickar dina kontaktuppgifter till styrelsen så att du inte missar viktig information. </p>
 
       <h2>Årsmöte</h2>
-      <p>Träutensilierna i ett tryckeri äro ingalunda en
-        faktor där trevnadens ordningens och ekonomiens upprätthållande,
-        och dock är det icke sällan som sorgliga erfarenheter göras ordningens
-        och ekon och miens därmed upprätthållande.</p>
+      <p>2017</p>
+      <ul>
+        <ol>Kallelse 2017</ol>
+        <ol>Förvaltningsberättelse 2016</ol>
+        <ol>Årsredovisning 2016</ol>
+        <ol>Framtida Planer </ol>
+      </ul>
+
 
     </section>
 
