--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
       font-size:0.8em;
     }
 
+    .pdf_small {
+      width: 50 px;
+      border: none;
+      cursor: pointer;
+      filter: grayscale(80%);
+    }
+    
     article {
       width:100%;
       padding: 10px;
@@ -284,12 +291,11 @@
 
       <h2>Årsmöte</h2>
       <p>2017</p>
-      <ul>
-        <ol>Kallelse 2017</ol>
-        <ol>Förvaltningsberättelse 2016</ol>
-        <ol>Årsredovisning 2016</ol>
-        <ol>Framtida Planer </ol>
-      </ul>
+        <img class="pdf_small" src="img/application_pdf.png">Kallelse 2017<br>
+        <img class="pdf_small" src="img/application_pdf.png">Förvaltningsberättelse 2016<br>
+        <img class="pdf_small" src="img/application_pdf.png">Årsredovisning 2016<br>
+        <img class="pdf_small" src="img/application_pdf.png">Framtida Planer<br>
+
 
 
     </section>
