--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       font-size:0.8em;
     }
 
-    .pdf_small {
+    .pdf-small {
       width: 50 px;
       border: none;
       cursor: pointer;
@@ -291,10 +291,10 @@
 
       <h2>Årsmöte</h2>
       <p>2017</p>
-        <img class="pdf_small" src="img/application_pdf.png">Kallelse 2017<br>
-        <img class="pdf_small" src="img/application_pdf.png">Förvaltningsberättelse 2016<br>
-        <img class="pdf_small" src="img/application_pdf.png">Årsredovisning 2016<br>
-        <img class="pdf_small" src="img/application_pdf.png">Framtida Planer<br>
+        <img class="pdf-small" src="img/application_pdf.png">Kallelse 2017<br>
+        <img class="pdf-small" src="img/application_pdf.png">Förvaltningsberättelse 2016<br>
+        <img class="pdf-small" src="img/application_pdf.png">Årsredovisning 2016<br>
+        <img class="pdf-small" src="img/application_pdf.png">Framtida Planer<br>
 
 
 
