--- a/index.html
+++ b/index.html
@@ -291,10 +291,10 @@
 
       <h2>Årsmöte</h2>
       <p>2017</p>
-        <img class="pdf-small" src="img/application_pdf.png">Kallelse 2017<br>
-        <img class="pdf-small" src="img/application_pdf.png">Förvaltningsberättelse 2016<br>
-        <img class="pdf-small" src="img/application_pdf.png">Årsredovisning 2016<br>
-        <img class="pdf-small" src="img/application_pdf.png">Framtida Planer<br>
+        <img class="pdf-small" src="img/pdf.png">Kallelse 2017<br>
+        <img class="pdf-small" src="img/pdf.png">Förvaltningsberättelse 2016<br>
+        <img class="pdf-small" src="img/pdf.png">Årsredovisning 2016<br>
+        <img class="pdf-small" src="img/pdf.png">Framtida Planer<br>
 
 
 
